Change instrumentationKey to connectionstring

--- a/hugo/layouts/_default/baseof.html
+++ b/hugo/layouts/_default/baseof.html
@@ -20,7 +20,7 @@
             crossOrigin: "anonymous", // When supplied this will add the provided value as the cross origin attribute on the script tag
             // onInit: null, // Once the application insights instance has loaded and initialized this callback function will be called with 1 argument -- the sdk instance (DO NOT ADD anything to the sdk.queue -- As they won't get called)
             cfg: { // Application Insights Configuration
-                instrumentationKey: "f91b5db3-3154-402e-b22d-ca56c8dded1c"
+                connectionString: "InstrumentationKey=f91b5db3-3154-402e-b22d-ca56c8dded1c;IngestionEndpoint=https://australiaeast-1.in.applicationinsights.azure.com/"
             }});
         </script>
             
